--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = theme
+parts = theme test
 
 develop = .
 
@@ -7,3 +7,7 @@ develop = .
 recipe = zc.recipe.egg
 eggs = sphinxjp.themes.revealjs
 interpreter = py
+
+[test]
+recipe = pbp.recipe.noserunner
+eggs = sphinxjp.themes.revealjs[test]
