--- a/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
@@ -74,3 +74,6 @@ transition_speed = default
 
 # Transition style for full page slide backgrounds (default/linear)
 background_transition = default
+
+# Enable plguin javascript for reveal.js
+plugin_list =
