--- a/setup.cfg
+++ b/setup.cfg
@@ -11,5 +11,7 @@ formats = gztar
 upload-dir = _build/sphinx/html
 
 [aliases]
+test = nosetests --cover-package=sphinxjp.themes.revealjs --with-coverage
+dev = develop easy_install sphinxjp.themes.revealjs
 upload_docs = build_sphinx upload_docs
 release = upload_docs sdist upload
