--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,13 @@
 [tox]
-envlist=py25,py26,py27,py31,py32,py33,py34
+envlist=py26,py27,py32,py33,py34,pypy,flake8
 
 [testenv]
 deps=
+    nose
     Sphinx>=1.2b3
 commands=
     {envpython} setup.py build_sphinx
-
-[testenv:py25]
-setenv=
-    PIP_INSECURE = 1
-
-[testenv:py27]
-deps=
-    flake8
-    {[testenv]deps}
-commands=
-    flake8 src
-    {[testenv]commands}
+    {envpython} setup.py test
 
 [testenv:py33]
 deps=
@@ -28,3 +18,9 @@ deps=
 deps=
     docutils>=0.10.0
     {[testenv]deps}
+
+[testenv:flake8]
+deps=
+    flake8
+commands=
+    flake8 src
