update Reveal.js version to 2.6.2

--- a/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
@@ -58,7 +58,7 @@ auto_slide = 0
 mouse_wheel = false
 
 # Apply a 3D roll to links on hover
-rolling_links = true
+rolling_links = false
 
 # Opens links in an iframe preview overlay
 preview_links = false
@@ -75,5 +75,44 @@ transition_speed = default
 # Transition style for full page slide backgrounds (default/linear)
 background_transition = default
 
+# Display the page number of the current slide
+slide_number = false
+
+# Flags if the presentation is running in an embedded mode,
+# i.e. contained within a limited portion of the screen
+embedded = false
+
+# Stop auto-sliding after user input
+auto_slide_stoppable = true
+
+# Hides the address bar on mobile devices
+hide_address_bar = true
+
+# Parallax background image
+# CSS syntax, e.g. "a.jpg"
+parallax_background_image = ''
+
+# Parallax background size
+# CSS syntax, e.g. "3000px 2000px"
+parallax_background_size = ''
+
+# Focuses body when page changes visiblity to ensure keyboard shortcuts work
+focus_body_on_page_visibility_change = true
+
+# Number of slides away from the current that are visible
+view_distance = 3
+
 # Enable plguin javascript for reveal.js
 plugin_list =
+
+# config for Multiplexing
+multiplex =
+
+# config for Leap motion
+leap =
+
+# config for MathJax
+math =
+
+# loading custom js after RevealJs.initialize.
+customjs =
