--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,11 @@ commands=
     {envpython} setup.py build_sphinx
     {envpython} setup.py test
 
+[testenv:py32]
+deps=
+    Jinja2>=2.3,<2.7
+    {[testenv]deps}
+
 [testenv:py33]
 deps=
     docutils>=0.10.0
