refs #3 Drop Python-3.2 support

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,3 @@
-include buildout.cfg
-include bootstrap.py
-include MANIFEST.in
+include README.rst
 recursive-include docs *
 recursive-include src *.py *.txt *.html *.css* *.conf *.png *.js *.eot *.svg *.ttf *.woff *.otf
