--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py26,py27,py32,py33,py34,pypy,flake8
+envlist=py26,py27,py33,py34,pypy,flake8
 
 [testenv]
 deps=
@@ -7,11 +7,6 @@ deps=
 commands=
     {envpython} setup.py build_sphinx
     {envpython} setup.py test
-
-[testenv:py32]
-deps=
-    Jinja2>=2.3,<2.7
-    {[testenv]deps}
 
 [testenv:py33]
 deps=
