--- a/tox.ini
+++ b/tox.ini
@@ -2,21 +2,16 @@
 envlist=py26,py27,py33,py34,pypy,flake8
 
 [testenv]
-deps=
-    nose
 commands=
-    {envpython} setup.py build_sphinx
-    {envpython} setup.py test
+    {envpython} setup.py test -a "--cov sphinxjp"
 
 [testenv:py33]
 deps=
     docutils>=0.10.0
-    {[testenv]deps}
 
 [testenv:py34]
 deps=
     docutils>=0.10.0
-    {[testenv]deps}
 
 [testenv:flake8]
 deps=
