--- a/setup.cfg
+++ b/setup.cfg
@@ -7,11 +7,15 @@ build-base = _build
 [sdist]
 formats = gztar
 
+[wheel]
+universal = 1
+
+[check]
+strict = 1
+
 [upload_docs]
 upload-dir = _build/sphinx/html
 
 [aliases]
-test = nosetests --with-coverage --cover-erase --cover-package=sphinxjp.themes.revealjs
-dev = develop easy_install sphinxjp.themes.revealjs
 upload_docs = build_sphinx upload_docs
-release = upload_docs sdist upload
+release = upload_docs sdist bdist_wheel upload
