Upgrade Reveal.js version to 3.0.0

--- a/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
@@ -63,16 +63,16 @@ rolling_links = false
 # Opens links in an iframe preview overlay
 preview_links = false
 
-# Theme (default/beige/moon/night/serif/simple/sky/solarized)
-theme = default
+# Theme (black/white/league/beige/sky/night/serif/simple/solarized)
+theme = black
 
-# Transition style (default/cube/page/concave/zoom/linear/fade/none)
+# Transition style (default/none/fade/slide/convex/concave/zoom)
 transition = default
 
 # Transition speed (default/fast/slow)
 transition_speed = default
 
-# Transition style for full page slide backgrounds (default/linear)
+# Transition style for full page slide backgrounds (default/none/fade/slide/convex/concave/zoom)
 background_transition = default
 
 # Display the page number of the current slide
