reveal.js: add dejavu theme
Signed-off-by: Markus Heiser <markus.heiser@darmarit.de>

--- a/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
@@ -64,7 +64,7 @@ rolling_links = false
 preview_links = false
 
 # Theme (black/white/league/beige/sky/night/serif/simple/solarized)
-theme = black
+theme = dejavu
 
 # Transition style (default/none/fade/slide/convex/concave/zoom)
 transition = default
