--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.rst
 recursive-include docs *
-recursive-include src *.py *.txt *.html *.css* *.conf *.png *.js *.eot *.svg *.ttf *.woff *.otf
+recursive-include src *.py *.txt *.html *.css* *.conf *.png *.js *.eot *.svg *.ttf *.woff *.woff2 *.otf
