DejaVu: moved to reveal.js
For the whol DejaVue thing, I added a PR to reveal.js:

- https://github.com/hakimel/reveal.js/pull/2386

With this commit we take over this PR and make some cleanups:

- use reveal.min.js and reveal.min.css
- update layout.html to fit revealjs versions >= 3.8
- drop unneded files from revealjs/static

Signed-off-by: Markus Heiser <markus.heiser@darmarit.de>

--- a/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/theme.conf
@@ -4,8 +4,8 @@ stylesheet = revealjs.css
 pygments_style = friendly
 
 [options]
-# Set the lang attribute of the html tag. Defaults to "ja"
-lang = ja
+# Set the lang attribute of the html tag. Defaults to "en"
+lang = en
 
 # The "normal" size of the presentation, aspect ratio will be preserved
 # when the presentation is scaled to fit different resolutions
@@ -17,7 +17,7 @@ margin = 0.1
 
 # Bounds for smallest/largest possible scale to apply to content
 min_scale = 0.2
-max_scale = 1.0
+max_scale = 2
 
 # Display controls in the bottom right corner
 controls = true
@@ -35,7 +35,7 @@ keyboard = true
 overview = true
 
 # Vertical centring of slides
-center = true
+center = false
 
 # Enables touch navigation on devices with touch input
 touch = true
